--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
+    "ulid": "^3.0.1",
     "ws": "^8.18.3"
   }
 }
