--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "pdf-parse": "^1.1.1",
     "socket.io": "^4.8.1",
     "ulid": "^3.0.1",
     "ws": "^8.18.3"
